[gd_scene load_steps=4 format=3 uid="uid://25ynmk3ipjwk"]

[ext_resource type="Script" path="res://Object Types/Main Assets/Bullet/bullet.gd" id="1_25rtm"]
[ext_resource type="Texture2D" uid="uid://tgr4hee1eyag" path="res://Object Types/Main Assets/Bullet/Bullet.png" id="1_al56h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwcev"]
size = Vector2(40, 16)

[node name="Bullet" type="Area2D"]
collision_layer = 16
collision_mask = 47
script = ExtResource("1_25rtm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_al56h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uwcev")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
